--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,10 @@ upstream todo-api {
   server todo-api:8080;
 }
 
+upstream users-api {
+  server users-api:8080;
+}
+
 server {
   listen 80;
 
@@ -23,5 +27,10 @@ server {
   location /todo-api {
       rewrite /todo-api/(.*) /$1 break;
       proxy_pass http://todo-api;
+  }
+
+  location /users-api {
+      rewrite /users-api/(.*) /$1 break;
+      proxy_pass http://users-api;
   }
 }
